--- a/project-addons/pos_custom_cc/views/assets.xml
+++ b/project-addons/pos_custom_cc/views/assets.xml
@@ -1,10 +1,4 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<!--
-    Copyright (C) 2017-Today: La Louve (<http://www.lalouve.net/>)
-    Copyright (C) 2019-Today: Druidoo (<https://www.druidoo.io>)
-    @author: Sylvain LE GAL (https://twitter.com/legalsylvain)
-    License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
--->
 <odoo>
     <template id="assets_frontend" inherit_id="point_of_sale.assets">
         <xpath expr="." position="inside">
@@ -22,11 +16,11 @@
                 src="/pos_custom_cc/static/src/js/models.js"
             />
         </xpath>
-        <xpath expr="//link[@id='pos-stylesheet']" position="after">
+        <!-- <xpath expr="//link[@id='pos-stylesheet']" position="after">
             <link
                 rel="stylesheet"
-                href="/pos_custom_cc/static/src/css/pos_cuustom_cc.css"
+                href="/pos_custom_cc/static/src/css/pos_custom_cc.css"
             />
-        </xpath>
+        </xpath> -->
     </template>
 </odoo>
