--- a/project-addons/product_serial_number/views/stock_location_view.xml
+++ b/project-addons/product_serial_number/views/stock_location_view.xml
@@ -6,7 +6,7 @@
             <field name="model">stock.location</field>
             <field name="inherit_id" ref="stock.view_location_form" />
             <field name="arch" type="xml">
-                <field name="return_location" position="after">
+                <field name="usage" position="after">
                     <!-- <field name="police"/>
                     <field name="recoverable_sale"/>
                     <field name="deposit"/>
