--- a/project-addons/product_serial_number/views/stock_production_lot_view.xml
+++ b/project-addons/product_serial_number/views/stock_production_lot_view.xml
@@ -30,6 +30,22 @@
                         <field name="cc_type" />
                         <field name="standard_price" />
                         <field name="list_price" />
+                        <field
+                            name="renew_commission"
+                            attrs="{
+                        'required':  [('cc_type', 'in', ('recoverable_sale'))],
+                        'invisible': [('cc_type', 'not in', ('recoverable_sale'))]}"
+                        />
+                        <field
+                            name="recovered"
+                            attrs="{
+                        'invisible': [('cc_type', 'not in', ('recoverable_sale'))]}"
+                        />
+                        <field
+                            name="num_renew"
+                            attrs="{
+                        'invisible': [('cc_type', 'not in', ('recoverable_sale'))]}"
+                        />
                         <field name="location_info_id" />
                         <field name="location_info_ids" widget="many2many_tags" />
                     </group>
@@ -122,14 +138,19 @@
             <field name="product_id" position="after">
                 <field name="lot_location_id" />
                 <separator />
-                <filter
+                <!-- <filter
                     name="salable"
                     string="Salable"
                     domain="['|', ('police_date','&lt;', time.strftime('%%Y-%%m-%%d')), ('police_date','=', False)]"
                     help="Lot available in sales"
+                /> -->
+                <!-- pUEDE NO FUNCIONAR PORQUE NO SE RECALCULA CON STORE, aunque tengo el cron -->
+                <filter
+                    name="salable"
+                    string="Salable"
+                    domain="[('salable', '=', True)]"
+                    help="Lot available in sales"
                 />
-                <!-- pUEDE NO FUNCIONAR PORQUE NO SE RECALCULA CON STORE -->
-                <!-- <filter name="salable" string="Salable" domain="[('salable', '=', True)]" help="Lot available in sales"/> -->
                 <filter
                     name="police"
                     string="Police"
