[ADD]cambios desde docker

--- a/project-addons/pos_custom_cc/views/assets.xml
+++ b/project-addons/pos_custom_cc/views/assets.xml
@@ -5,6 +5,10 @@
             <script type="text/javascript" src="/pos_custom_cc/static/src/js/db.js" />
             <script
                 type="text/javascript"
+                src="/pos_custom_cc/static/src/js/popups.js"
+            />
+            <script
+                type="text/javascript"
                 src="/pos_custom_cc/static/src/js/screens.js"
             />
             <script
