--- a/project-addons/pos_custom_cc/wizard/recoverable_sale_wzd.xml
+++ b/project-addons/pos_custom_cc/wizard/recoverable_sale_wzd.xml
@@ -7,7 +7,9 @@
                 <form>
                     <group>
                         <field name="mode" />
+                        <field name="create_invoice" />
                         <field name="product_id" />
+                        <field name="pos_config_id" />
                         <field name="payment_method_id" />
                         <field name="amount" />
                     </group>
