--- a/project-addons/account_custom_cc/wizard/purchase_invoice_wzd.xml
+++ b/project-addons/account_custom_cc/wizard/purchase_invoice_wzd.xml
@@ -6,6 +6,7 @@
             <field name="arch" type="xml">
                 <form>
                     <group>
+                        <field name="pos_config_id" />
                         <field
                         name="journal_id"
                         domain="[('type', 'in', ('bank', 'cash'))]"
